--- a/css/style.css
+++ b/css/style.css
@@ -127,41 +127,43 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+ 
+ @media  screen and (max-width: 768px){
+        .container {
+            width: 100%;
+        }
+    }
+    @media  screen and (max-width: 480px){
+        .container {
+            width: 100%;
+        }
+        .row{
+            flex-wrap: wrap;
+        }
+        .why-us{
+            background-color: #222222;
+            margin-bottom: 0;
+            padding: 50px 0;
+        }
+        .steps{
+            margin-bottom: 0;
+        }
+        .why-us .col{
+            width: 100%;
+        }
+        .steps .col{
+            width: 100%;
+        }
+        .lessons .col{
+            width: 100%;
+        }
+    }
+    /************************************************
+        BONUS
+     ************************************************/
+@media  screen and (max-width: 1160px){
 
-@media  screen and (max-width: 768px){
-    * {
-        box-sizing: border-box;
-    }
-    .container {
-        width: 100%;
-    }
-}
-@media  screen and (max-width: 480px){
-    * {
-        box-sizing: border-box;
-    }
-    .container {
-        width: 100%;
-    }
-    .row{
-        flex-wrap: wrap;
-    }
-    .why-us{
-        background-color: #222222;
-        margin-bottom: 0;
-        padding: 50px 0;
-    }
-    .steps{
-        margin-bottom: 0;
-    }
-    .why-us .col{
-        width: 100%;
-    }
-    .steps .col{
-        width: 100%;
-    }
-    .lessons .col{
-        width: 100%;
-    }
-
- }
+       .container {
+           width: 100%;
+       }
+   }
